--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,3 +1,12 @@
+header.change_locale=RU/EN
+header.university_name=High tech university
+header.links.home=Home
+header.links.about=About
+header.links.faculties=Faculties
+header.links.contacts=Contacts
+header.log_in_button=Log in
+header.sign_up_button=Sign up
+
 login.title=Login
 login.welcome_back=Welcome back!
 login.email=Email
