--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -1,3 +1,12 @@
+header.change_locale=RU/EN
+header.university_name=Университет высоких технологий
+header.links.home=Главная
+header.links.about=Об
+header.links.faculties=Факультеты
+header.links.contacts=Контакты
+header.log_in_button=Войти
+header.sign_up_button=Регистрация
+
 login.title=Вход
 login.welcome_back=С возвращением!
 login.email=Электронная почта
