Implemented user-validation, added PasswordDigest, refactor signUpCommand.

--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -6,7 +6,7 @@ header.links.faculties=Факультеты
 header.links.contacts=Контакты
 header.log_in_button=Войти
 header.sign_up_button=Регистрация
-
+header.log_out_button=Выйти
 login.title=Вход
 login.welcome_back=С возвращением!
 login.email=Электронная почта
@@ -15,7 +15,6 @@ login.password=Пароль
 login.password_placeholder=Введите пароль
 login.sign_in=Войти
 login.forget_password=Забыли пароль?
-
 signup.title=Регистрация
 signup.sign_up=Регистрация
 signup.first_name=Имя
@@ -28,6 +27,12 @@ signup.passport_id=ID паспорта
 signup.passport_id_placeholder=Введите ID паспорта
 signup.password=Пароль
 signup.password_placeholder=Введите пароль
+signup.confirm_password=Подтверждение пароля
+signup.confirm_password_placeholder=Введите пароль еще раз
 signup.sign_up_button=Зарегистрироваться
 signup.already_have_account=У Вас уже есть аккаунт?
 signup.sign_in=Войти
+signup.alert_header=Ошибка при вводе данных
+signup.alert_message_incorrect_email=Пользователь с таким email уже существует, используйте другой email.
+signup.alert_message_incorrect_data=Вами были некорректно введены данные.\nИмя и фамилия должны содержать только буквы.\nEmail должен быть введен корректно(например university@gmail.com).\nПаспортные данные должны содержать серию(2 буквы) и номер(7 цифр) паспорта (AB1112233).\nПароль должен иметь хотя бы 1 заглавную и 1 прописную букву, 1 цифру и быть не короче 8 символов.
+
