--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -6,6 +6,7 @@ header.links.faculties=Faculties
 header.links.contacts=Contacts
 header.log_in_button=Log in
 header.sign_up_button=Sign up
+header.log_out_button=Log out
 
 login.title=Login
 login.welcome_back=Welcome back!
@@ -28,6 +29,9 @@ signup.passport_id=Passport id
 signup.passport_id_placeholder=Enter your passport id
 signup.password=Password
 signup.password_placeholder=Enter Password
+signup.confirm_password=Confirm password
+signup.confirm_password_placeholder=Repeat password
 signup.sign_up_button=Sign up
-signup.already_have_account=>Already have an account?
+signup.already_have_account=Already have an account?
 signup.sign_in=Sign in
+signup.alert_header=Input error
