Added Profile and editProfile.

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -4,6 +4,7 @@ header.links.home=Home
 header.links.about=About
 header.links.faculties=Faculties
 header.links.contacts=Contacts
+header.links.profile=Profile
 header.log_in_button=Log in
 header.sign_up_button=Sign up
 header.log_out_button=Log out
@@ -35,3 +36,37 @@ signup.sign_up_button=Sign up
 signup.already_have_account=Already have an account?
 signup.sign_in=Sign in
 signup.alert_header=Input error
+
+error.title=Error
+error.404.header=Not found (404)
+error.404.message=Sorry, the page you are looking for does not exist.
+error.500.header=Internal server error (500)
+error.500.message=Sorry, something went wrong(
+
+profile.title=Profile
+profile.personal.data.name=Name
+profile.personal.data.surname=Surname
+profile.personal.data.passport_data=Passport data
+profile.personal.data.edit_button=Edit profile
+profile.application.data.header=Application
+profile.application.data.faculty=Faculty
+profile.application.data.date_of_application=Date of application
+profile.application.data.first_subject_points=Points for the first subject
+profile.application.data.second_subject_points=Points for the second subject
+profile.application.data.third_subject_points=Points for the third subject
+profile.application.data.confirmed=Confirmed
+profile.application.data.confirmation_date=Confirmation date
+profile.application.data.rejection_reason=Rejection reason
+profile.application.add_application_button=Apply for admission
+
+edit_profile.title=Edit profile
+edit_profile.first_name=First name
+edit_profile.first_name_placeholder=Enter your first name
+edit_profile.last_name=Last name
+edit_profile.last_name_placeholder=Enter your last name
+edit_profile.email=Email
+edit_profile.email_placeholder=Enter Email
+edit_profile.passport_id=Passport id
+edit_profile.passport_id_placeholder=Enter your passport id
+edit_profile.edit_button=Edit
+edit_profile.alert_header=Input error
