--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -4,9 +4,11 @@ header.links.home=Главная
 header.links.about=Об
 header.links.faculties=Факультеты
 header.links.contacts=Контакты
+header.links.profile=Профиль
 header.log_in_button=Войти
 header.sign_up_button=Регистрация
 header.log_out_button=Выйти
+
 login.title=Вход
 login.welcome_back=С возвращением!
 login.email=Электронная почта
@@ -15,6 +17,7 @@ login.password=Пароль
 login.password_placeholder=Введите пароль
 login.sign_in=Войти
 login.forget_password=Забыли пароль?
+
 signup.title=Регистрация
 signup.sign_up=Регистрация
 signup.first_name=Имя
@@ -22,9 +25,9 @@ signup.first_name_placeholder=Введите свое имя
 signup.last_name=Фамилия
 signup.last_name_placeholder=Введите свою фамилию
 signup.email=Электронная почта
-signup.email_placeholder=Введите адрес электронной почты
-signup.passport_id=ID паспорта
-signup.passport_id_placeholder=Введите ID паспорта
+signup.email_placeholder=Введите email
+signup.passport_id=Серия и номер паспорта
+signup.passport_id_placeholder=Введите паспортные данные
 signup.password=Пароль
 signup.password_placeholder=Введите пароль
 signup.confirm_password=Подтверждение пароля
@@ -33,6 +36,37 @@ signup.sign_up_button=Зарегистрироваться
 signup.already_have_account=У Вас уже есть аккаунт?
 signup.sign_in=Войти
 signup.alert_header=Ошибка при вводе данных
-signup.alert_message_incorrect_email=Пользователь с таким email уже существует, используйте другой email.
-signup.alert_message_incorrect_data=Вами были некорректно введены данные.\nИмя и фамилия должны содержать только буквы.\nEmail должен быть введен корректно(например university@gmail.com).\nПаспортные данные должны содержать серию(2 буквы) и номер(7 цифр) паспорта (AB1112233).\nПароль должен иметь хотя бы 1 заглавную и 1 прописную букву, 1 цифру и быть не короче 8 символов.
 
+error.title=Ошибка
+error.404.header=Не найдена (404)
+error.404.message=Извините, страница, которую вы ищете, не существует.
+error.500.header=Внутренняя ошибка сервера (500)
+error.500.message=Извините, что-то пошло не так(
+
+profile.title=Профиль
+profile.personal.data.name=Имя
+profile.personal.data.surname=Фамилия
+profile.personal.data.passport_data=Паспортные данные
+profile.personal.data.edit_button=Редактировать
+profile.application.data.header=Заявка
+profile.application.data.faculty=Факультет
+profile.application.data.date_of_application=Дата подачи
+profile.application.data.first_subject_points=К-во баллов за первый предмет
+profile.application.data.second_subject_points=К-во баллов за второй предмет
+profile.application.data.third_subject_points=К-во баллов за третий предмет
+profile.application.data.confirmed=Подтверждена
+profile.application.data.confirmation_date=Дата подтверждения
+profile.application.data.rejection_reason=Причина отклонения
+profile.application.add_application_button=Подать заявку
+
+edit_profile.title=Редактирование профиля
+edit_profile.first_name=Имя
+edit_profile.first_name_placeholder=Введите свое имя
+edit_profile.last_name=Фамилия
+edit_profile.last_name_placeholder=Введите свою фамилию
+edit_profile.email=Электронная почта
+edit_profile.email_placeholder=Введите email
+edit_profile.passport_id=Серия и номер паспорта
+edit_profile.passport_id_placeholder=Введите паспортные данные
+edit_profile.edit_button=Редактировать
+edit_profile.alert_header=Input error
