Refactored UserProfile, added AdminPage and footer.

--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -1,13 +1,33 @@
 header.change_locale=RU/EN
 header.university_name=High tech university
 header.links.home=Home
-header.links.about=About
+header.links.about=About us
 header.links.faculties=Faculties
 header.links.contacts=Contacts
 header.links.profile=Profile
+header.links.admin=Admin
 header.log_in_button=Log in
 header.sign_up_button=Sign up
 header.log_out_button=Log out
+
+footer.about_us=About Us
+footer.about_us.text=Some text Some text Some textSome textSome text Some text Some text.
+footer.quick_links=Quick Links
+footer.quick_links.about=About
+footer.quick_links.contacts=Contacts
+footer.quick_links.help=Help
+footer.quick_links.log_in=Log in
+footer.university=University
+footer.quick_links.help.history_of_university=History of University
+footer.quick_links.help.achievements=Achievements
+footer.quick_links.help.faculties=Faculties
+footer.quick_links.help.admissions_office=Admissions office
+footer.contact_us=Contact Us
+footer.contact_us.address.street=54d Some Street
+footer.contact_us.address.country=UK
+footer.contact_us.address.city=London
+footer.contact_us.email=HighTechUniversity@gmail.com
+footer.copyright=Copyright © 2022 Alex Shevelyanchik. All Rights Reserved.
 
 login.title=Login
 login.welcome_back=Welcome back!
@@ -15,8 +35,9 @@ login.email=Email
 login.email_placeholder=Enter Email
 login.password=Password
 login.password_placeholder=Enter Password
-login.sign_in=Sign in
-login.forget_password=Forget password?
+login.sign_in_button=Sign in
+login.sign_up=Sign up
+login.have_not_an_account=Have not an account yet?
 
 signup.title=Sign up
 signup.sign_up=Sign up
@@ -26,8 +47,8 @@ signup.last_name=Last name
 signup.last_name_placeholder=Enter your last name
 signup.email=Email
 signup.email_placeholder=Enter Email
-signup.passport_id=Passport id
-signup.passport_id_placeholder=Enter your passport id
+signup.passport_id=Series and passport number
+signup.passport_id_placeholder=Enter passport data
 signup.password=Password
 signup.password_placeholder=Enter Password
 signup.confirm_password=Confirm password
@@ -54,10 +75,11 @@ profile.application.data.date_of_application=Date of application
 profile.application.data.first_subject_points=Points for the first subject
 profile.application.data.second_subject_points=Points for the second subject
 profile.application.data.third_subject_points=Points for the third subject
-profile.application.data.confirmed=Confirmed
+profile.application.data.confirmed=Status
 profile.application.data.confirmation_date=Confirmation date
 profile.application.data.rejection_reason=Rejection reason
 profile.application.add_application_button=Apply for admission
+profile.application.edit_button=Edit application
 
 edit_profile.title=Edit profile
 edit_profile.first_name=First name
@@ -66,7 +88,27 @@ edit_profile.last_name=Last name
 edit_profile.last_name_placeholder=Enter your last name
 edit_profile.email=Email
 edit_profile.email_placeholder=Enter Email
-edit_profile.passport_id=Passport id
-edit_profile.passport_id_placeholder=Enter your passport id
+edit_profile.passport_id=Series and passport number
+edit_profile.passport_id_placeholder=Enter passport data
 edit_profile.edit_button=Edit
 edit_profile.alert_header=Input error
+
+addition_application.title=Create an application
+addition_application.choosing_faculty=Choose faculty
+addition_application.points_first_subject=Points for the first subject
+addition_application.points_first_subject_placeholder=Enter points for the first subject
+addition_application.points_second_subject=Points for the second subject
+addition_application.points_second_subject_placeholder=Enter points for the second subject
+addition_application.points_third_subject=Points for the third subject
+addition_application.points_third_subject_placeholder=Enter points for the third subject
+addition_application.create_button=Create
+
+edit_application.title=Edit an application
+edit_application.choosing_faculty=Choose faculty
+edit_application.points_first_subject=Points for the first subject
+edit_application.points_first_subject_placeholder=Enter points for the first subject
+edit_application.points_second_subject=Points for the second subject
+edit_application.points_second_subject_placeholder=Enter points for the second subject
+edit_application.points_third_subject=Points for the third subject
+edit_application.points_third_subject_placeholder=Enter points for the third subject
+edit_application.edit_button=Edit
