--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -1,13 +1,33 @@
 header.change_locale=RU/EN
 header.university_name=Университет высоких технологий
 header.links.home=Главная
-header.links.about=Об
+header.links.about=О нас
 header.links.faculties=Факультеты
 header.links.contacts=Контакты
 header.links.profile=Профиль
+header.links.admin=Администратор
 header.log_in_button=Войти
 header.sign_up_button=Регистрация
 header.log_out_button=Выйти
+
+footer.about_us=About Us
+footer.about_us.text=Some text Some text Some textSome textSome text Some text Some text.
+footer.quick_links=Quick Links
+footer.quick_links.about=About
+footer.quick_links.contacts=Contacts
+footer.quick_links.help=Help
+footer.quick_links.log_in=Log in
+footer.university=University
+footer.quick_links.help.history_of_university=History of University
+footer.quick_links.help.achievements=Achievements
+footer.quick_links.help.faculties=Faculties
+footer.quick_links.help.admissions_office=Admissions office
+footer.contact_us=Contact Us
+footer.contact_us.address.street=54d Some Street
+footer.contact_us.address.country=UK
+footer.contact_us.address.city=London
+footer.contact_us.email=HighTechUniversity@gmail.com
+footer.copyright=Copyright © 2022 Alex Shevelyanchik. All Rights Reserved.
 
 login.title=Вход
 login.welcome_back=С возвращением!
@@ -15,8 +35,9 @@ login.email=Электронная почта
 login.email_placeholder=Введите адрес электронной почты
 login.password=Пароль
 login.password_placeholder=Введите пароль
-login.sign_in=Войти
-login.forget_password=Забыли пароль?
+login.sign_in_button=Войти
+login.sign_up=Зарегистрироваться
+login.have_not_an_account=Еще нет аккаунта?
 
 signup.title=Регистрация
 signup.sign_up=Регистрация
@@ -39,7 +60,7 @@ signup.alert_header=Ошибка при вводе данных
 
 error.title=Ошибка
 error.404.header=Не найдена (404)
-error.404.message=Извините, страница, которую вы ищете, не существует.
+error.404.message=Извините, страницы, которую вы ищете, не существует.
 error.500.header=Внутренняя ошибка сервера (500)
 error.500.message=Извините, что-то пошло не так(
 
@@ -54,10 +75,11 @@ profile.application.data.date_of_application=Дата подачи
 profile.application.data.first_subject_points=К-во баллов за первый предмет
 profile.application.data.second_subject_points=К-во баллов за второй предмет
 profile.application.data.third_subject_points=К-во баллов за третий предмет
-profile.application.data.confirmed=Подтверждена
+profile.application.data.confirmed=Статус
 profile.application.data.confirmation_date=Дата подтверждения
 profile.application.data.rejection_reason=Причина отклонения
 profile.application.add_application_button=Подать заявку
+profile.application.edit_button=Редактировать
 
 edit_profile.title=Редактирование профиля
 edit_profile.first_name=Имя
@@ -70,3 +92,23 @@ edit_profile.passport_id=Серия и номер паспорта
 edit_profile.passport_id_placeholder=Введите паспортные данные
 edit_profile.edit_button=Редактировать
 edit_profile.alert_header=Input error
+
+addition_application.title=Создание заявки
+addition_application.choosing_faculty=Выберете факультет
+addition_application.points_first_subject=Баллы за первый предмет
+addition_application.points_first_subject_placeholder=Введите баллы за первый предмет
+addition_application.points_second_subject=Баллы за второй предмет
+addition_application.points_second_subject_placeholder=Введите баллы за второй предмет
+addition_application.points_third_subject=Баллы за третий предмет
+addition_application.points_third_subject_placeholder=Введите баллы за третий предмет
+addition_application.create_button=Создать
+
+edit_application.title=Редактирование заявки
+edit_application.choosing_faculty=Выберете факультет
+edit_application.points_first_subject=Баллы за первый предмет
+edit_application.points_first_subject_placeholder=Введите баллы за первый предмет
+edit_application.points_second_subject=Баллы за второй предмет
+edit_application.points_second_subject_placeholder=Введите баллы за второй предмет
+edit_application.points_third_subject=Баллы за третий предмет
+edit_application.points_third_subject_placeholder=Введите баллы за третий предмет
+edit_application.edit_button=Редактировать
