--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -138,3 +138,11 @@ subjects.Inform.full_name=Informatics
 subjects.Sociol.id=4
 subjects.Sociol.short_name=Sociol
 subjects.Sociol.full_name=Sociology
+
+home.title=Home
+home.university.name=HighTech University
+home.university.short_description_first_part=The HTE community is driven by a shared purpose: to make a better world through education, research, and innovation.
+home.university.short_description_second_part=We are fun and quirky, elite but not elitist, inventive and artistic, obsessed with numbers, and welcoming to talented people regardless of where they come from.
+home.university.visit_us_button=Visit Us To know More
+home.university.faculties.title=Our Faculties
+home.university.faculties.short_description=Our Faculties are renowned for focusing precisely on the subject area and getting the most out of it.
