--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -116,16 +116,16 @@ edit_application.edit_button=Редактировать
 
 faculties.EECS.id=1
 faculties.EECS.short_name=EECS
-faculties.EECS.full_name=Electrical Engineering and Computer Science
-faculties.EECS.short_description=EECS IS WHERE THE FUTURE IS INVENTED.
+faculties.EECS.full_name=Электротехника и информатика
+faculties.EECS.short_description=EECS, здесь избретается БУДУЩЕЕ.
 faculties.MECHE.id=2
 faculties.MECHE.short_name=MECHE
-faculties.MECHE.full_name=Mechanical Engineering
-faculties.MECHE.short_description=Explore our Global Impact.
+faculties.MECHE.full_name=Механическая инженерия
+faculties.MECHE.short_description=Узнайте о нашем глобальном влиянии.
 faculties.DSS.id=3
 faculties.DSS.short_name=DSS
-faculties.DSS.full_name=Data, Systems, and Society
-faculties.DSS.short_description=Data, Systems, and Society (DSS) is committed to addressing complex societal challenges by advancing education and research at the intersection of statistics, data science, information and decision systems, and social sciences.
+faculties.DSS.full_name=Данные, системы и социум
+faculties.DSS.short_description=Данные, системы и общество» (DSS) стремится решать сложные социальные проблемы, продвигая образование и исследования на стыке статистики, науки о данных, информационных систем и систем принятия решений и социальных наук.
 //
 subjects.Maths.id=1
 subjects.Maths.short_name=Maths
@@ -139,3 +139,11 @@ subjects.Inform.full_name=Informatics
 subjects.Sociol.id=4
 subjects.Sociol.short_name=Sociol
 subjects.Sociol.full_name=Sociology
+
+home.title=Главная
+home.university.name=Университет высоких технологий
+home.university.short_description_first_part=TСообщество HTE руководствуется общей целью: сделать мир лучше с помощью образования, исследований и инноваций.
+home.university.short_description_second_part=Мы веселые и причудливые, элитные, но не элитарные, изобретательные и артистичные, одержимые числами и приветствуем талантливых людей, независимо от того, откуда они.
+home.university.visit_us_button=Посетите нас, чтобы узнать больше
+home.university.faculties.title=Наши Факультеты
+home.university.faculties.short_description=Наши факультеты славятся тем, что уделяют особое внимание предметной области и получают от нее максимальную отдачу.
