Added confirm/reject/add/edit Application functionality.

--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -117,7 +117,7 @@ edit_application.edit_button=Редактировать
 faculties.EECS.id=1
 faculties.EECS.short_name=EECS
 faculties.EECS.full_name=Электротехника и информатика
-faculties.EECS.short_description=EECS, здесь избретается БУДУЩЕЕ.
+faculties.EECS.short_description=EECS, здесь изобретается БУДУЩЕЕ.
 faculties.MECHE.id=2
 faculties.MECHE.short_name=MECHE
 faculties.MECHE.full_name=Механическая инженерия
@@ -142,7 +142,7 @@ subjects.Sociol.full_name=Sociology
 
 home.title=Главная
 home.university.name=Университет высоких технологий
-home.university.short_description_first_part=TСообщество HTE руководствуется общей целью: сделать мир лучше с помощью образования, исследований и инноваций.
+home.university.short_description_first_part=Сообщество HTE руководствуется общей целью: сделать мир лучше с помощью образования, исследований и инноваций.
 home.university.short_description_second_part=Мы веселые и причудливые, элитные, но не элитарные, изобретательные и артистичные, одержимые числами и приветствуем талантливых людей, независимо от того, откуда они.
 home.university.visit_us_button=Посетите нас, чтобы узнать больше
 home.university.faculties.title=Наши Факультеты
